--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,14 @@ dependencies:
   flutter_svg: ^2.0.7
   google_fonts: ^6.1.0
   table_calendar: ^3.0.9
+  auto_route: ^7.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  auto_route_generator: ^7.3.1
+  
 
   flutter_lints: ^2.0.0
 
