--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: new_element_training
 description: A new Flutter project.
 
-publish_to: 'none' 
-
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -23,22 +22,18 @@ dependencies:
   google_fonts: ^6.1.0
   table_calendar: ^3.0.9
   auto_route: ^7.8.3
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
   auto_route_generator: ^7.3.1
-  
 
   flutter_lints: ^2.0.0
 
-
 flutter:
-
-
   uses-material-design: true
-
 
   assets:
     - assets/svgs/
