--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
         "source.organizeImports": true,
     },
     "editor.formatOnSave": true,
+    "cmake.sourceDirectory": "/Users/aleksandrmironuk/Workspace/2023/dev/new_element_training/linux",
 }
