--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   spider: ^4.2.2
   responsive_builder: ^0.7.0
   flutter_screenutil: ^5.9.0
   flutter_bloc: ^8.1.3
-  dio: 5.3.3
+  dio: ^5.3.3
   shared_preferences: ^2.2.1
   flutter_svg: ^2.0.7
   google_fonts: ^6.1.0
